--- a/angular_app/src/app/arqueology/arqueology.component.html
+++ b/angular_app/src/app/arqueology/arqueology.component.html
@@ -1,4 +1,6 @@
 <div class="my-container">
+  <br><br>
+  <div class="main">
 
 <h2>  Археологічна спадщина</h2>
 
@@ -24,4 +26,5 @@
   Тому для того хто є археологом в душі і знає що під нашими ногами дуже часто ховається щось неймовірне і прекрасне, буде справжнім
   задоволенням душі відкривати для себе унікальні скарби минулого посеред поля з оливками, на схилах гір і прямо під будинками Ліссабона.
 </p>
+</div>
 </div>
