--- a/angular_app/src/app/beach/beach.component.html
+++ b/angular_app/src/app/beach/beach.component.html
@@ -1,5 +1,7 @@
-<div class="my-container">
-<h2>Найкращі 5 пляжів в Португалії</h2>
+<div class="my-container"><br><br>
+  <div class="main">
+
+  <h2>Найкращі 5 пляжів в Португалії</h2>
 <p>
   Португалія славиться своїми прекрасними пляжами, а уздовж берегової лінії 1779 км - одні з найкращих пляжів Європи. Ці пляжі такі ж різноманітні і різноманітні, як Португалія, починаючи від величезних просторів золотих пісків і закінчуючи відокремленими бухтами з мальовничим пейзажем.
   Якщо ви шукаєте країну, яка пропонує прекрасні пляжі та славний клімат, то Португалія - ідеальне місце для відпочинку для вас. Ця стаття збирає наші улюблені пляжі з усієї країни та надає посилання на подальші поглиблені путівники.
@@ -47,6 +49,6 @@
 </ul>
 <img src="assets/img/n2.jpg">
 </div>
-
+</div>
 
 
