--- a/angular_app/src/app/castles-palaces/castles-palaces.component.html
+++ b/angular_app/src/app/castles-palaces/castles-palaces.component.html
@@ -1,4 +1,6 @@
 <div class="my-container">
+  <br><br>
+  <div class="main">
 
 <h2>Палаци та замки Португалії</h2>
 <p>Коли ви думаєте про те, що можна зробити в Португалії, ви не завжди думаєте про замки. Натомість Португалія схиляється до зображень надзвичайно красивих пляжів, драматичних зубчастих берегових ліній, смачної випічки, хитромудрої дизайнерської плитки та навіть архітектури на відміну від інших країн Європи, але ніколи насправді ця ідея прекрасних замків у Португалії.</p>
@@ -26,4 +28,5 @@
 <img src="assets/img/cast5.jpg">
 <p>Замок Белвер спочатку був побудований для запобігання доступу ворога до річки Тежу. Після поразки короля Санчо в 12 столітті замок був переданий ордену госпіталістів, які закріпили свою монополію на владу над усією територією області.
   Протягом багатьох століть фортеця залишалася незахищеною від зовнішніх впливів і зберігала своє архаїчне військове будівництво середньовічного періоду.</p>
+</div>
 </div>
