--- a/angular_app/src/app/gastronomy-traditions/gastronomy-traditions.component.html
+++ b/angular_app/src/app/gastronomy-traditions/gastronomy-traditions.component.html
@@ -1,4 +1,6 @@
 <div class="my-container">
+  <br><br>
+  <div class="main">
 
 <h2>Традиції гастрономії</h2>
 <img src="assets/img/food1.jpg"  class="one">
@@ -29,4 +31,4 @@
 <img src="assets/img/food8.jpg">
 <p>У центрі країни кулінарним шиком являється смажене порося. Ціле молочне порося запікають на дровах, помістивши в спеціальну ємність. Готову страву доповнюють вишуканим соусом.</p>
 </div>
-
+</div>
