--- a/angular_app/src/app/history/history.component.html
+++ b/angular_app/src/app/history/history.component.html
@@ -1,6 +1,7 @@
 <div class="my-container">
 <br>
   <br>
+  <div class="main">
 <h4>
   Цей список розбиває довгу історію Португалії - а також райони, що складають сучасну Португалію - на короткі пункти щоб отримати швидкий огляд.
 </h4>
@@ -24,4 +25,5 @@
   Незважаючи на свою увагу до внутрішніх проблем, Португалія продовжує відігравати активну роль в ЄС та в поглибленні відносин між Європою та Африкою. Португалія виявляється рушійною силою спільноти португальських країн, що розмовляють, і оголосила пропозиції щодо досягнення різкого скорочення бідності серед країн-членів до 2015 року.
 </p>
 <img src="assets/img/Lisboa.jpg" alt="1">
+  </div>
 </div>
