--- a/angular_app/src/app/how-to-go/how-to-go.component.html
+++ b/angular_app/src/app/how-to-go/how-to-go.component.html
@@ -1,4 +1,7 @@
 <div class="my-container">
+  <br><br>
+  <div class="main">
+
   <h2>Cпособи подорожі до Португалії</h2>
   <p>Лісабон – столиця Португалії, одне з найтепліших міст Європи. За легендою, засноване, як і Рим, на семи пагорбах самим Одісеєм.
     У 1775 році Лісабон був майже повністю зруйнований сильним землетрусом та цунамі, після чого його відбудували.</p>
@@ -23,4 +26,5 @@
   <p>
     Це варіант для справжніх мандрівників та вправних водіїв. За бажанням ви можете спланувати свій маршут мрії і насолодитись незабутньою поїздкою.
   </p>
+</div>
 </div>
