--- a/angular_app/src/app/islands/islands.component.html
+++ b/angular_app/src/app/islands/islands.component.html
@@ -1,5 +1,7 @@
 
 <div class="my-container">
+  <div class="main">
+
   <h2>Азори та Мадейра</h2>
 <h3>Мадейра</h3>
 <p>
@@ -31,4 +33,5 @@
   Човни щодня пливуть між островами Піко, Фаял та Сан-Хорхе. Між Сан-Хорхе та Терсейрою існує декілька днів на тиждень, але він не пливе цілий рік. Не існує ризику і в погану погоду. Однак місцева авіакомпанія SATA Air Açores працює майже щодня між островами.
 </p>
 <img src="assets/img/yaht.jpg">
+</div>
 </div>
