--- a/angular_app/src/app/login/login.component.scss
+++ b/angular_app/src/app/login/login.component.scss
@@ -89,8 +89,9 @@
   }
 
 .my-container{
-  background-image: url("src/assets/img/2.png");
+  background-image: url("src/assets/img/back.jpg");
   background-size: cover;
+  padding: 9%;
 }
 
 
