--- a/angular_app/src/app/museums/museums.component.html
+++ b/angular_app/src/app/museums/museums.component.html
@@ -1,4 +1,5 @@
-<div class="my-container">
+<div class="my-container"><br><br>
+  <div class="main">
 
 <h2>Музеї Португалії</h2>
 <h4>Музей азулейжу </h4>
@@ -28,4 +29,5 @@
   Цей музей є одним з найбільш відвідуваних і важливих у країні, названий на честь британського благодійника вірменського походження, який присвятив своє життя просуванню мистецтва, освіти та науки.
   У музеї є чудова і велика колекція мистецтва та артефактів єгипетського, грецького, римського, ісламського, азіатського та європейського походження.
 </p>
+</div>
 </div>
