--- a/angular_app/src/app/navigation/navigation.component.scss
+++ b/angular_app/src/app/navigation/navigation.component.scss
@@ -11,10 +11,12 @@
   font-size: 1.2vw;
   font-weight: bold;
   color: #111111;
+  cursor: pointer;
 }
 
 .navbar-nav li:hover > ul.dropdown-menu {
   display: block;
+  cursor: pointer;
 }
 
 .dropdown-submenu {
@@ -61,3 +63,6 @@ nav {
 
 }
 
+.buttons {
+  display: none !important;
+}
