--- a/angular_app/src/app/news/news.component.html
+++ b/angular_app/src/app/news/news.component.html
@@ -1,7 +1,9 @@
 <div class="my-container">
 <br>
   <br>
-<h2>Hовини</h2>
+  <div class="main">
+
+  <h2>Hовини</h2>
 <h4>
   Портгалія програла Україні 1:2.
 </h4>
@@ -45,4 +47,4 @@
   Вперше Португалія має дев'ять різних партій у своєму парламенті.</li>
 </ul>
 </div>
-
+</div>
