--- a/angular_app/src/app/ocean/ocean.component.html
+++ b/angular_app/src/app/ocean/ocean.component.html
@@ -1,6 +1,8 @@
 <div class="my-container">
 <br><br>
-<h2>Oкеан</h2>
+  <div class="main">
+
+  <h2>Oкеан</h2>
 <img src="assets/img/ocean4.jpg">
 <p>
   Португальська берегова лінія омивається Атлантичним океаном, який наблизив Португалію до інших народів і культур.
@@ -30,3 +32,4 @@
   <strong> Океанські ініціативи в Португалії</strong>
   «Океанські ініціативи в Португалії» було ініційовано Португальським фондом «Сурфідрид», Віана де Кастело Главою у 1998 році. Інші глави фонду «Серфрідер» були засновані в Порто, Пеніче, Ерісейра, Лісабоні та Азорських островах. Усі ці глави встановлюють партнерські стосунки з муніципалітетами та іншими асоціаціями для організації прибирання пляжних океанських ініціатив по всій Португалії, особливо в перші вихідні весни.
 </p>
+  </div>
