--- a/angular_app/src/app/people/people.component.html
+++ b/angular_app/src/app/people/people.component.html
@@ -1,6 +1,8 @@
 <div class="my-container">
 <br><br>
-<h1>цікавi факти про португальців</h1>
+  <div class="main">
+
+  <h1>цікавi факти про португальців</h1>
 
 <p>
   Якщо ви приїжджаєте до Португалії, вам, напевно, цікаво, хто такі  португальці!
@@ -62,4 +64,5 @@
   Вираз "com licença" використовується майже в будь-якій ситуації. Це означає "вибачте мене", і вони в Португалії дуже багато використовують: коли ви заходите в будинок, коли хочете кудись поїхати, але хтось стоїть на вашому шляху, якщо ви берете гроші у когось (наприклад, як касир у крамниця). Я думаю, що це дуже гарна характеристика португальського народу!
 </p>
 <p><strong>Oтже</strong> .. для мене португальці - це дуже миле населення. Якщо ви будете відвідувачем Португалії чи, можливо, студентом   вам не доведеться турбуватися з цими приємними людьми. Вони завжди будуть там, щоб допомогти вам!</p>
+</div>
 </div>
