--- a/angular_app/src/app/prices/prices.component.html
+++ b/angular_app/src/app/prices/prices.component.html
@@ -1,6 +1,8 @@
 <div class="my-container">
 <br><br>
-<h3>Ціни в Португалії</h3>
+  <div class="main">
+
+  <h3>Ціни в Португалії</h3>
 <img src="assets/img/tours-all.jpg" alt="2">
 <p>
   Традиційно Португалію сприймають як країну  з  низькою вартістю життя - вагомий привід там залишитись. Але низькі ціни не застосовуються у всій країні, і реальність полягає в тому, що, окрім деяких ключових секторів, Португалія вже не є особливо дешевою країною для проживання.
@@ -53,4 +55,4 @@
   <li>Різні витрати (товари для дому та предмети особистого користування, включаючи місцеве медичне страхування):
     150</li></ul>>
 </div>
-
+</div>
