--- a/angular_app/src/app/sea-discovers/sea-discovers.component.html
+++ b/angular_app/src/app/sea-discovers/sea-discovers.component.html
@@ -1,6 +1,8 @@
 <div class="my-container">
 <br><br>
-<h2>Морські відкриття</h2>
+  <div class="main">
+
+  <h2>Морські відкриття</h2>
 <p>Португалія може бути маленькою країною, але її внесок у світ був величезним. Це відіграло життєво важливу роль в епоху відкриттів та розвідки Європи, і багато найпопулярніших пам'ятників країни були споруджені в честь цього періоду. Тут ми розглянемо життєво важливу роль, яку взяла Португалія в дослідженні світу Європи між 15 та 18 століттями.</p>
 
 <img src="assets/img/hama.jpg" class="foto">
@@ -38,8 +40,8 @@
     <li>створив морську академію в Сагресі, на краю Атлантики</li>
     <li>закликав місцевих суднобудівників розробити човни, придатні для плавання на відкритому морі</li>
   </ul>
-<<img src="assets/img/slave.jpg" class="map">
+<img src="assets/img/slave.jpg" class="map">
 
 </div>
 </div>
-
+</div>
