--- a/angular_app/src/app/sea-foods/sea-foods.component.html
+++ b/angular_app/src/app/sea-foods/sea-foods.component.html
@@ -1,6 +1,8 @@
 <div class="my-container">
 <br><br>
-<h2>Багатство морепродуктів</h2>
+  <div class="main">
+
+  <h2>Багатство морепродуктів</h2>
 <h4>Золота тріска або Bacalhau à Brás</h4>
 <img src="assets/img/food9.jpg">
 <p>Улюблена страва португальців – риба Тріска (засолена). Різноманіття приготування страв з цієї риби надзвичайно велике та цікаве. Смачно і для дорослих і для дітей. Рецептура прийшла з давніх часів мореплавців та першовідкривачів світів. </p><h4>Основні інгредієнти традиційної португальської кухні</h4>
@@ -15,4 +17,5 @@
   Polvo à Lagareiro - це тарілка, яку дуже цінують на португальській кухні, настільки, що вона гідна своїх столів у особливі дні, як переддень Різдва. Восьминіг подають холодним з гарно заправленою оливковою олією та невеличким пучком петрушки, тому це прекрасна закуска на будь-який час.
 </p>
 <img src="assets/img/food13.jpg">
+</div>
 </div>
