--- a/angular_app/src/app/sweet-masterpiece/sweet-masterpiece.component.html
+++ b/angular_app/src/app/sweet-masterpiece/sweet-masterpiece.component.html
@@ -1,6 +1,8 @@
 <div class="my-container">
 <br><br>
-<h2>Солодкі шедеври</h2>
+  <div class="main">
+
+  <h2>Солодкі шедеври</h2>
 <h4>Паште́л-де-на́та (pastel-de-nata)</h4>
 <img src="assets/img/food15.png"  class="bolo">
   <img src="assets/img/food16.jpg"  class="bolo">
@@ -17,4 +19,5 @@
 <p>
   Десерт з дуже цікавою назвою «волосся ангела», або «яєчні нитки», і правда з вигляду нагадує тонкі волосинки. Поширений він не тільки в Португалії, але також в Бразилії, Японії та Таїланді. Втім, історики впевнені, що рецепт десерту з'явився саме в португальському монастирі ще в 14 або 15 столітті і лише після цього був завезений мандрівниками в інші країни. Основу для майбутніх ниток роблять з жовтків. Їх акуратно відокремлюють від білків і пропускають через спеціальне пристосування прямо в киплячий цукровий сироп. Після цього майбутні ласощі легко викладають лопаткою на сито, даючи стекти рідині. Яєчні нитки не рідко використовують як прикраси для тортів та інших десертів, а також як гарнір до різних страв.
 </p>
+</div>
 </div>
