--- a/angular_app/src/app/undergroud/undergroud.component.html
+++ b/angular_app/src/app/undergroud/undergroud.component.html
@@ -1,5 +1,6 @@
 <div class="my-container">
   <br><br>
+    <div class="main">
   <p>Геологія Португалії досить чітка, по пловині країна розділяється на гранітну північ
     із своїми чудернацькими валунами та
     вапняковий південь із всеможливими і деколи майже неможливими карстовими
@@ -19,4 +20,5 @@
  <p> В Алгарве печер чи гротів ви майже не знайдете, зате арки, секретні пляжі, стовпи, ущелини та обриви вас змусять забути
     про про усе прочитане і бачене раніше. Якщо замовити тур на лодці то можна відвідати такі місця де ще й морьских
     зірок руками назбирати!</p>
+</div>
 </div>
