--- a/angular_app/src/app/unique-facts/unique-facts.component.html
+++ b/angular_app/src/app/unique-facts/unique-facts.component.html
@@ -1,6 +1,8 @@
 <div class="my-container">
-<br>
   <br>
+  <br>
+    <div class="main">
+
 <h2>Унікальні і цікаві факти про Португалію</h2>
 <p>Португа́лія, офіційно Португа́льська Респу́бліка (порт.<code> República Portuguesa</code>) — держава на крайньому південному заході Європи. Розташована в західній частині Піренейського півострова, а також на островах Азорських і Мадейра в Атлантичному океані. Межує з Іспанією.
 </p>
@@ -17,7 +19,7 @@
   <li>Національний музичний стиль Португалії - фаду.</li>
   <li>Державні автомобільні номери в Португалії можна зробити в будь-якій майстерні. </li>
   <li>Прапор Португалії має такий вигляд:</li>
-  <img src="assets/img/прапор.jpg">
+  <img src="assets/img/flag.jpg">
   <li>Португалія з Іспанією вперше за всіх ділили між собою світ.Називається "тратадо ди тордесіляш"</li>
   <li>У португальському містечку Евора є каплиця, декорована скелетами 5000 ченців-францисканців.</li>
   <li><strong>Один з найстаріших університетів Європи - в Португалії</strong>
@@ -37,4 +39,5 @@
   </li>
 
 </ul>
+</div>
 </div>
