--- a/angular_app/src/app/unique-placement/unique-placement.component.html
+++ b/angular_app/src/app/unique-placement/unique-placement.component.html
@@ -1,5 +1,7 @@
 <div class="my-container">
 <br><br>
+
+    <div class="main">
 <p>Португалія - одна з найдавніших країн Європи, яка встановила свій континентальний кордон, як це встановлено сьогодні в 1297 році. Португалія була незалежним королівством з 1143 року, коли перший португальський король Дом Афонсо Енрікес повстав проти своєї матері Дони Терези з португальської графині Португалії. Тереза повстала проти Королівства Леона і була помазана королевою Папою, хоча вона була змушена прийняти Португалію як країну, що підлягає Леону. Після любовної справи з галицьким дворянином Фернандо Перес де Траба відбувся її син Дом Афонсо Енрікес, який підтримав єпископа і шляхту, перемігши його матір у битві при Сан-Мамеде в 1128 р., Проголосивши незалежність від Леона.</p>
 <p>Португалія розміщується на крайньому південному заході Європи а також острів Мадейра й Азорські острови в Атлантичному океані. На півночі та сході межує з Іспанією - 1232 км, має вихід до Атлантичного океану, берегова лінія 832 км. Найвища точка г. Сьєрра-да-Ештрела - 1993 м. Країну перетинають ріки, н
   Португалія розташована на західній стороні Піренейського півострова, ідеально розташована між Іспанією та Атлантичним океаном. Її географічне розташування вздовж узбережжя Атлантики є причиною того, що швидко став країною, пов'язаною з океаном, що створила основу для багатовікових морських пригод та відкриттів
@@ -53,4 +55,5 @@
   <li><strong>Монте-Есторіл:  </strong>славні пляжі та казино, які надихнули Яна Флемінга.</li>
   <li><strong>Сінтра:  </strong>Казкові замки, палаци, сувенірні магазини та Мадонна.</li>
 </ul>
+</div>
 </div>
