--- a/angular_app/src/app/when-to-go/when-to-go.component.html
+++ b/angular_app/src/app/when-to-go/when-to-go.component.html
@@ -1,5 +1,5 @@
 <div class="my-container">
-  <br><br>
+   <br><br><div class="main">
   <h2>Найкращі та найдешевші часи для відвідування Португалії</h2>
   <img src="assets/img/img1.jpg">
   <p>
@@ -48,4 +48,5 @@
     Загалом, найкращі часи для відвідування та якомога більше досвіду в Португалії - це з березня до початку червня або середини вересня та середини до кінця листопада.
     Навесні квітучі квіти додають додаткового колориту містам, вже освітленим пастельними фарбами, а осінь - час збору врожаю, що означає і сезон вина.
   </p>
+</div>
 </div>
