--- a/angular_app/src/app/footer/footer.component.html
+++ b/angular_app/src/app/footer/footer.component.html
@@ -29,7 +29,7 @@
             <div class="row">
               <div class="col-1"><i class="fas fa-phone-volume"></i></div>
               <div class="col-10">
-                <h6 class="font-weight-bold mb-0">Address:</h6>
+                <h6 class="font-weight-bold mb-0">Phone:</h6>
                 <p><a href="#">3806377484865</a></p>
               </div>
             </div>
