--- a/angular_app/src/app/home/home.component.html
+++ b/angular_app/src/app/home/home.component.html
@@ -1,6 +1,33 @@
 <div class="my-container">
-  <img src="assets/img/back.jpg" alt="background">
-
+<div style="display: none">
   <h1 class="blue">ШМАТОЧОК ПОРТУГАЛІЇ</h1>
   <h1 class="yellow"> В УКРАЇНІ</h1>
 </div>
+        <div class="login" [ngClass]="{invisible: visibility}">
+          <h2 class="login-header">Log in</h2>
+          <form [formGroup]="loginForm" class="login-container" (ngSubmit)="login()">
+
+            <p [ngClass]="{ 'has-error': isSubmitted && formControls.email.errors }">
+              <input type="email" placeholder="Email" formControlName="email" ngModel="email"
+              pattern="myk.nadia@gmail.com" required="myk.nadia@gmail.com">
+            </p>
+            <div *ngIf="isSubmitted && formControls.email.errors" class="help-block">
+              <div *ngIf="formControls.email.errors.required">Email обовязковий</div>
+              <div *ngIf="formControls.email.dirty && !formControls.email.errors.required">Email некорректний</div>
+            </div>
+
+            <p [ngClass]="{ 'has-error': isSubmitted && formControls.password.errors }">
+              <input type="password" placeholder="Password" formControlName="password" ngModel="password" pattern="12345" required>
+            </p>
+
+            <div *ngIf="isSubmitted && formControls.password.errors" class="help-block">
+              <div *ngIf="formControls.password.errors.required">Пароль обовязковий</div>
+              <div *ngIf="formControls.password.dirty && !formControls.password.errors.required">Пароль некоректний</div>
+            </div>
+            <p>
+              <input type="submit"  value="Log in">
+            </p>
+          </form>
+        </div>
+      </div>
+
