--- a/angular_app/src/app/login/login.component.html
+++ b/angular_app/src/app/login/login.component.html
@@ -2,32 +2,35 @@
 <div class="my-container">
   <br>
   <br>
-        <div class="login">
+<!--        <div  class=" login" >-->
+<!--  <h2 class="login-header">Log in</h2>-->
+<!--  <form [formGroup]="loginForm" class="login-container" (ngSubmit)="login()">-->
+<!--    <p [ngClass]="{ 'has-error': isSubmitted && formControls.email.errors }">-->
+<!--      <input type="email" placeholder="Email" formControlName="email"-->
+<!--             pattern="myk.nadia@gmail.com"-->
+<!--      >-->
+<!--    </p>-->
+<!--    <div *ngIf="isSubmitted && formControls.email.errors" class="help-block">-->
+<!--      <div *ngIf="formControls.email.errors.required">Email is required</div>-->
+<!--    </div>-->
 
-  <h2 class="login-header">Log in</h2>
-  <form [formGroup]="loginForm" class="login-container" (ngSubmit)="login()">
+<!--    <p [ngClass]="{ 'has-error': isSubmitted && formControls.password.errors }">-->
+<!--      <input type="password" placeholder="Password" formControlName="password"-->
+<!--             pattern="12345" >-->
 
-    <p [ngClass]="{ 'has-error': isSubmitted && formControls.email.errors }">
-      <input type="email" placeholder="Email" formControlName="email"
-             pattern="myk.nadia@gmail.com">
-    </p>
-    <div *ngIf="isSubmitted && formControls.email.errors" class="help-block">
-      <div *ngIf="formControls.email.errors.required">Email is required</div>
-    </div>
+<!--    </p>-->
 
-    <p [ngClass]="{ 'has-error': isSubmitted && formControls.password.errors }">
-      <input type="password" placeholder="Password" formControlName="password" pattern="12345">
-    </p>
-
-    <div *ngIf="isSubmitted && formControls.password.errors" class="help-block">
-      <div *ngIf="formControls.password.errors.required">Password is required</div>
-<!--     <div *ngIf="formControls.password.errors.minlength">Password must be at least 6 characters</div>-->
-    </div>
-    <p>
-      <input type="submit"  value="Log in">
-    </p>
-  </form>
+<!--    <div *ngIf="isSubmitted && formControls.password.errors" class="help-block">-->
+<!--      <div *ngIf="formControls.password.errors.required">Password is required</div>-->
+<!--&lt;!&ndash;     <div *ngIf="formControls.password.errors.minlength">Password must be at least 6 characters</div>&ndash;&gt;-->
+<!--    </div>-->
+<!--    <p>-->
+<!--      <input type="submit"  value="Log in">-->
+<!--    </p>-->
+<!--    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
+<!--  </form>-->
+<!--        </div>-->
 </div>
-<br>
-<br>
-</div>
+
+
+
