--- a/angular_app/src/app/when-to-stay/when-to-stay.component.html
+++ b/angular_app/src/app/when-to-stay/when-to-stay.component.html
@@ -1,5 +1,7 @@
 <div class="my-container">
   <br><br>
+  <div class="main">
+  <br><br>
   <h5>Вибирайте, де ви хочете базуватися, перш ніж шукати житло!</h5>
   <p>Якщо ви запланували поїздку в Португалію , обовязково виберіть місто в якому ви хочете відпочити. Адже якщо місто відпочинку ви вибрали Лісабон,
     то на вас чекає великий вибір готелів та хостелів.
@@ -14,4 +16,5 @@
   <p>Якщо ви прихильник спокійного відпочинку в контакті з природою, , з повним релаксом, з незабутніми враженнями ,то для вас найкращий варіант буде вибрати сільський туризм.
     Сільський туризм сьoгодні створює серйозну конкуренцію для попередніх варіантів. В цих районах ви знайдете приватні будинки з басейном і захоплючим краєвидом і персоналом не гіршим ніж в готелях.
     <img src="assets/img/house.jpg">
+</div>
 </div>
